tukqph20340_code_entity_repo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=NHOM6_QUAN_LY_BAN_SACH;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=shopbook;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=123456
 spring.jpa.database=sql_server
