--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,39 @@
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=shopbook;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=123456
+#spring.datasource.password=123456
+spring.datasource.password=12345
+
 spring.jpa.database=sql_server
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+
+#Hibernate auto ddl
+spring.jpa.hibernate.ddl-auto=update
+#
+logging.level.org.hibernate.SQL=DEBUG
+
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 5MB
+
+#Cloudinary configuration
+cloudinary.cloud_name=drlroexjl
+cloudinary.api_key=359998546179577
+cloudinary.api_secret=t34PqguRIV0HCEX6bodXHpiTIfw
+
+#Send email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nguyentrunganhnta43@gmail.com
+spring.mail.password=wurcybogcuynjtqh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+mail.smtp.debug=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
 
